--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
 	"type": "project",
 	"require": {
 		"laravel/framework": "5.0.*",
-		"barryvdh/laravel-debugbar": "~2.0",
-        "illuminate/html": "5.*"
+        "illuminate/html": "5.*",
+		"nesbot/carbon": "~1.14"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
