--- a/composer.json
+++ b/composer.json
@@ -28,16 +28,16 @@
 	},
 	"scripts": {
 		"post-install-cmd": [
-			"php artisan clear-compiled",
-			"php artisan optimize"
+			"php-latest artisan clear-compiled",
+			"php-latest artisan optimize"
 		],
 		"post-update-cmd": [
-			"php artisan clear-compiled",
-			"php artisan optimize"
+			"php-latest artisan clear-compiled",
+			"php-latest artisan optimize"
 		],
 		"post-create-project-cmd": [
-			"php -r \"copy('.env.example', '.env');\"",
-			"php artisan key:generate"
+			"php-latest -r \"copy('.env.example', '.env');\"",
+			"php-latest artisan key:generate"
 		]
 	},
 	"config": {
